maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:6: error: value &&! is not a member of Boolean
    while (!(t1&&!t2)) {
               ^