maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  
  def keepHandOnSideWall() {
    var t1=estDosMur
    var t2=estFaceMur
    while (!(t1&&!t2)) {
      droite()
      if (estDosMur) {return}
    }
    
  }
  while (!estSurBiscuit) {
    keepHandOnSideWall()
    avance()
  }
  
  
  
}